--- a/Faroosom/Faroosom.MVC/Views/Action/ShowAllUsers.cshtml
+++ b/Faroosom/Faroosom.MVC/Views/Action/ShowAllUsers.cshtml
@@ -12,7 +12,7 @@
         <div class="header__item">Login</div>
     </div>
     <div class="table-content">
-        @foreach (var user in @Model)
+        @foreach (var user in Model)
         {
             <div class="table-row">
                 <div class="table-data">@user.Id</div>
