--- a/Faroosom/Faroosom.MVC/Views/Shared/_Layout.cshtml
+++ b/Faroosom/Faroosom.MVC/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ 
-    UserDto user = Global.User;
+    var user = Global.User;
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -55,7 +55,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Faroosom.MVC - 
+            &copy; 2021 - Faroosom.MVC
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
